[tool.poetry]
name = "fastapi-stack-utils"
version = "0.5.2"  # remember to change in fastapi_stack_utils/__init__.py too
description = "Utils to extend the FastAPI with logging and exception handlers"
authors = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
asgi-correlation-id = "3.0.1"
fastapi = "0.85.0"
gunicorn = "20.1.0"
python-json-logger = "2.0.4"
pytz = "2022.2.1"
sentry-sdk = "1.9.8"
uvloop = {version = "0.17.0", optional = true, markers = "sys_platform != \"win32\""}
uvicorn = { extras = ["standard"], version = "0.18.3" }

[tool.poetry.dev-dependencies]
dirty-equals = "0.5.0"
httpx = "0.23.0"
pre-commit = "2.20.0"
pytest = "7.1.3"
pytest-asyncio = "0.19.0"
pytest-cov = "3.0.0"
pytest-freezegun = "0.4.2"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["fastapi_log_utils"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]


[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
omit = [
    "fastapi_stack_utils/uvloop.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
